[package]
name = "simple-tween"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.16.0"
strum_macros = "0.16.0"
typename = "0.1.1"
serde = { version = "1.0.101", features = ["derive"] }

